# task-list-api

./: .gitignore  db.sqlite3  pyproject.toml
task/: models.py  serializers.py  views.py
task/migrations/: 0001_initial.py  0002_tasks_task_is_done.py
tasklist/: settings.py  urls.py
